# cripto

./: .env.example  .gitignore  README.md  check_db.py  config.example.toml  crypto_monitor.db.enc  pyproject.toml  requirements.txt  ver_tabelas.py
.claude/: settings.local.json
.github/workflows/: buy-add.yml  maintenance.yml  scan.yml  weekly.yml
crypto_monitor/: __init__.py
crypto_monitor/analytics/: __init__.py  aggregator.py  loader.py  reporter.py
crypto_monitor/binance/: __init__.py  client.py
crypto_monitor/buys/: __init__.py  manual.py
crypto_monitor/cli/: __init__.py  __main__.py  main.py
crypto_monitor/config/: __init__.py  (+1 more)
dashboard/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: dashboard.cmd  gha_state.sh  maintenance.cmd  register_tasks.cmd  scan.cmd  unregister_tasks.cmd  weekly.cmd
tests/: conftest.py  test_alert_policy.py  test_analytics_aggregator.py  test_analytics_reporter.py  test_atr.py  test_buy_evaluation.py  test_cli.py  test_dashboard_api.py  test_divergence.py  test_factors_reversal.py  test_factors_v2.py  test_formatters.py  test_manual_buys.py  test_migrations.py  test_notification_service.py  test_ntfy_sender.py  test_patterns.py  test_regime.py  test_rsi.py  test_scheduler.py  test_sell_engine.py  test_sell_runtime.py  test_sell_store.py  test_signal_dedup.py  test_signal_engine.py  test_signal_evaluation.py  test_support.py  test_time_utils.py  test_trend.py  test_verdict.py  test_volume.py  test_watchlist.py  test_watchlist_runtime.py  test_weekly_summary.py
(+85 files in other folders)
