[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_monitor"
version = "0.1.0"
description = "Local-first crypto market analysis and alerting for Windows."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
    "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]
# Read-only dashboard API. Optional because the bot itself never
# imports anything from `crypto_monitor.dashboard`; only the operator
# who wants to serve the FastAPI adapter needs these.
dashboard = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.6,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crypto_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
